Fixed text cutoff

--- a/Module2HW/css/styles.css
+++ b/Module2HW/css/styles.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 h2 {
-  margin-top: 0px;
+  margin: 0px;
   text-align: center;
   vertical-align: middle;
   font-size:125%;
@@ -27,12 +27,12 @@ h2 {
 }
 
 p {
-  width: 90%;
-  height: auto;
-  margin-right: auto;
-  margin-left: auto;
+  height: 100px;
   clear: right;
   font-weight: 600;
+  overflow: hidden;
+  padding-top: 10px;
+  margin: 10px;
 }
 
 /* Simple Responsive Framework. */
